--- a/index.html
+++ b/index.html
@@ -14,5 +14,6 @@
     <a href="PracticasParcial1.html">PORTAFOLIO PARCIAL 1</a>
     <a href="PracticaParcial2.html">PORTAFOLIO PARCIAL 2</a>
     <a href="ProyectoParcial2.html">PROYECTO PARCIAL 2</a>
+    <a href="PracticasParcial3.html">PORTAFOLIO PARCIAL 3</a>
 </body>
 </html>
