--- a/PracticasParcial3.html
+++ b/PracticasParcial3.html
@@ -56,6 +56,11 @@
                 <td>Consultas Spotify (1-4)</td>
                 <td><a href="Parcial3/Practica12.pdf">Ir a la práctica</a></td>
             </tr>
+            <tr>
+                <td>Proyecto Final</td> 
+                <td>Proyecto Final #3 / Consultas</td>
+                <td><a href="Parcial3/ProyectoFinal/index.html">Ir al proyecto</a></td>
+            </tr>
         </tbody>
     </table>
 </body>
